Fixed CI and plotting alignment

--- a/EMB/public/styles.css
+++ b/EMB/public/styles.css
@@ -191,7 +191,7 @@ body{
 .graph{
   margin-top: 53px;
   max-width: 1320px;
-  height: 630px;
+  height: 470px;
   box-sizing: border-box;
   box-shadow: 0px 4px 15px 2px rgba(0, 0, 0, 0.25);
   position: relative;
